--- a/p.css
+++ b/p.css
@@ -112,7 +112,7 @@ a {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: url(./images/slide-2.jpg);
+    background: url(./slide-2.jpg);
     background-size: cover;
     text-align: center;
     position: relative;
