--- a/p.css
+++ b/p.css
@@ -48,6 +48,7 @@ body {
 .hero-content {
   max-width: 800px;
   margin: 0 auto;
+  background-image:url("./slide-2.jpg");
 }
 
 .animated-text .name {
